all good, little issue with generated swag spec
